# CZI-converter

./: .gitignore  README.md  config.yaml  pyproject.toml  requirement.txt
.github/workflows/: test.yml
converter/: config.py  converter.py
tests/: test_download_and_convert.py
