[project]
name = "czi-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"numpy",
	"pillow",
	"openslide-python",
	"openslide-bin",
	"czifile",
	"tifffile",
	"pyyaml",
]

[dependency-groups]
dev = [
	"pytest>=8.4.1",
]
